finish ver. 0.01. use viewpager instead of gallery. TODO:delete function.
Signed-off-by: Aaron Xu <greatsnows@gmail.com>

--- a/membercard/AndroidManifest.xml
+++ b/membercard/AndroidManifest.xml
@@ -24,6 +24,10 @@
             android:name=".subContentActivity" 
             android:label="gellary"       
         />
+        <activity 
+            android:name=".VPActivity" 
+            android:label="viewpager"       
+        />
     </application>
 
 </manifest>
